protocolos y tratamiento medicos

--- a/WebContent/addEvolutionDetailOld.html
+++ b/WebContent/addEvolutionDetailOld.html
@@ -120,7 +120,7 @@
 				   <li><a href='#'><span>Responsables de Pago</span></a></li>
 				   <li><a href='#'><span>Cajas</span></a></li>
 				   <li><a href='#'><span>Bancos</span></a></li>
-				   <li class='last'><a href='#'><span>Cuentas</span></a></li>
+				   <li class='last'><a href='#'><span>Cuentas Pendientes</span></a></li>
 				</ul>
 		</div>
 		<div id="content">
