--- a/WebContent/protocols.html
+++ b/WebContent/protocols.html
@@ -85,7 +85,7 @@
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
 				   <li><a href='bank.html'><span>Cajas</span></a></li>
 				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
-				   <li class='last'><a href='accounts.html'><span>Cuentas</span></a></li>
+				   <li class='last'><a href='accounts.html'><span>Cuentas Pendientes</span></a></li>
 				</ul>
 			</div>
 		<div id="content">  
@@ -97,16 +97,16 @@
 								<thead>
 									<tr>
 										<th>ID</th>
-										<th>Unidad</th>
 										<th>Nombre</th>
+										<th>Descripción</th>
 										<th>Acciones</th>
 									</tr>
 								</thead>
 								<tbody>			
 									<tr class="gradeA">
 										<td>1001</td>
-										<td>Cirugía General</td>
 										<td>Frenuloplastia</td>
+										<td>Cirugía se realiza de forma ambulatoria con anestesia local y tiene una duración de 15 minutos.</td>
 										<td>
 											<a href="editProtocol.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
@@ -120,8 +120,8 @@
 									</tr>
 									<tr class="gradeA">
 										<td>1002</td>
-										<td>Otros Procedimientos</td>
-										<td>Tratamiento Médico</td>
+										<td>Colocación de protesis peneana</td>
+										<td>El implante de prótesis de pene constituye un tratamiento eficaz para la disfunción eréctil.</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
