--- a/WebContent/searchCashBoxForm.html
+++ b/WebContent/searchCashBoxForm.html
@@ -60,7 +60,7 @@
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
 				   <li class='active'><a href='bank.html'><span>Cajas</span></a></li>
 				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
-				   <li id="accounts" class='last'><a href='accounts.html'><span>Cuentas</span></a></li>
+				   <li id="accounts" class='last'><a href='accounts.html'><span>Cuentas Pendientes</span></a></li>
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
