--- a/WebContent/accounts.html
+++ b/WebContent/accounts.html
@@ -70,10 +70,11 @@
 			$('a[rel*=leanModal]').leanModal({ top : 200, closeButton: ".close_x, .buttonPopUpDelete" });		
 		});
 
-		function loadVars(var1, var2, var3) {
+		function loadVars(var1, var2, var3, var4) {
 			idUser = var1;
 			$('.type').text(var2);
 			$('.name').text(var3);
+			$('.actionAccount').text(var4);
 
 		};
 
@@ -120,7 +121,7 @@
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
 				   <li><a href='bank.html'><span>Cajas</span></a></li>
 				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
-				   <li class='last active'><a href='accounts.html'><span>Cuentas</span></a></li>
+				   <li class='last active'><a href='accounts.html'><span>Cuentas Pendientes</span></a></li>
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
@@ -164,6 +165,10 @@
 													onclick="return loadVars(1001,'Cobrar', 'Vidamed');" >
 													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 												</a> 
+												<a id="go" rel="leanModal" href="#closeAccount" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Cobrar', 'Vidamed', 'cobrada');" >
+													<img alt="logo" src="./images/check.png" height="16" width="16" title="Cobrada"/>
+												</a> 
 												<br>
 											</td>
 										</tr>
@@ -183,6 +188,10 @@
 													onclick="return loadVars(1001,'Cobrar', 'La Previsora');" >
 													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 												</a> 
+												<a id="go" rel="leanModal" href="#closeAccount" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Cobrar', 'La Previsora', 'cobrada');" >
+													<img alt="logo" src="./images/check.png" height="16" width="16" title="Cobrada"/>
+												</a> 
 												<br>
 											</td>
 										</tr>
@@ -201,6 +210,10 @@
 												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
 													onclick="return loadVars(1001,'Cobrar', 'Multinacional de Seguros');" >
 													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												</a> 
+												<a id="go" rel="leanModal" href="#closeAccount" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Cobrar', 'Multinacional de Seguros', 'cobrada');" >
+													<img alt="logo" src="./images/check.png" height="16" width="16" title="Cobrada"/>
 												</a> 
 												<br>
 											</td>
@@ -243,6 +256,10 @@
 													onclick="return loadVars(1001,'Pagar', 'Hospital Online');">
 													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 												</a> 
+												<a id="go" rel="leanModal" href="#closeAccount" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Pagar', 'Vidamed', 'pagada');" >
+													<img alt="logo" src="./images/check.png" height="16" width="16" title="Pagada"/>
+												</a> 
 												<br>
 											</td>
 										</tr>
@@ -261,6 +278,10 @@
 												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
 													onclick="return loadVars(1001,'Pagar', 'Multinacional de Seguros');" >
 													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												</a> 
+												<a id="go" rel="leanModal" href="#closeAccount" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Pagar', 'Multinacional de Seguros', 'pagada');" >
+													<img alt="logo" src="./images/check.png" height="16" width="16" title="Pagada"/>
 												</a> 
 												<br>
 											</td>
@@ -281,6 +302,10 @@
 													onclick="return loadVars(1001,'Pagar', 'Vidamed');" >
 													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 												</a> 
+												<a id="go" rel="leanModal" href="#closeAccount" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Pagar', 'Vidamed', 'pagada');" >
+													<img alt="logo" src="./images/check.png" height="16" width="16" title="Pagada"/>
+												</a> 
 												<br>
 											</td>
 										</tr>
@@ -296,6 +321,22 @@
 				<h3 id="see_id" class="sprited" > Eliminar Cuenta Por <span class="type"></span>  </h3>
 				<br><br>
 				<span>¿Está seguro que desea eliminar la cuenta por <span class="type"></span>  de <span class="name"></span>? </span> <br><br>
+				<div id="signup-header">
+					<a class="close_x" id="close_x"  href="#"></a>
+				</div>
+				<form >
+					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
+					<div class="btn-fld">
+						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
+					</div>
+		 		</form>
+			</div>
+		</div>
+		<div id="closeAccount">
+			<div id="signup-ct">
+				<h3 id="see_id" class="sprited" > Pagar cuenta <span class="type"></span>  </h3>
+				<br><br>
+				<span>¿Está seguro que la cuenta de <span class="name"></span> fue <span class="actionAccount"></span>? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
