--- a/WebContent/createEstimation.html
+++ b/WebContent/createEstimation.html
@@ -98,7 +98,7 @@
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
 				   <li><a href='bank.html'><span>Cajas</span></a></li>
 				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
-				   <li class='last'><a href='accounts.html'><span>Cuentas</span></a></li>
+				   <li class='last'><a href='accounts.html'><span>Cuentas Pendientes</span></a></li>
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
@@ -128,17 +128,7 @@
 							<input type="button"id="paymentResp" value="Escoger" >
 						</a> 
 					    </fieldset>
-					    <div id="botonera" style="margin-top: -3px;">
-							<form action="#">
-								<div id="botonP" style="display: inline; margin-right: 30px;">
-											<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
-								</div>	
-								<div id="botonV" style="display: inline;">
-										<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
-								</div>	
-							</form>
-						</div>
-						<br>
+					 	<br>
 					</div>
   					<div id="tabs-2">
   						<div style="text-align:right;">
@@ -163,7 +153,18 @@
 						</table>
 						<br>
 					</div>
-  				</div>
+  				</div><BR><BR>
+  				
+				  <div id="botonera" style="margin-top: -3px;">
+					<form action="estimations.html">
+						<div id="botonP" style="display: inline; margin-right: 30px;">
+									<input type="submit"  class="button"  name="sbmtButton" value="Crear" />
+						</div>	
+						<div id="botonV" style="display: inline;">
+								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
+						</div>	
+					</form>
+				</div>
 				
 			</div>
 		</div>
