--- a/WebContent/editMedicalTreatment.html
+++ b/WebContent/editMedicalTreatment.html
@@ -5,10 +5,18 @@
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
 		<title>Editar Tratamiento Médico</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
-	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
-		<link rel="stylesheet" href="/resources/demos/style.css" />		
+		<link rel="stylesheet" href="/resources/demos/style.css" />	
+		<script type="text/javascript" src="./js/formToWizard.js"></script>
+		<script type="text/javascript">
+		        $(document).ready(function(){
+		            $("#SignupForm").formToWizard({ submitButton: 'SaveAccount' })
+		        });
+		   </script>
+		<script type="text/javascript" src="./js/functions.js"></script>
+		
 	</head>
 	<body>
 		<div id="container">
@@ -18,12 +26,11 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="medicalTreatment.html">Ver Tratamientos Médicos</a></li>
-            		<li class="menuitem"><a href="createMedicalTreatment.html">Crear Tratamiento Médico</a></li>
+	            	<li class="menuitem"><a href="medicalTreatment.html">Ver Tratamientos</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
-						<div id='cssmenu'>
+			<div id='cssmenu'>
 				<ul>
 				   <li class='first'><a href='estimations.html'><span>Presupuesto</span></a></li>
 				   <li><a href='emergencies.html'><span>Emergencia</span></a></li>
@@ -44,89 +51,97 @@
 				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
 				   <li><a href='bank.html'><span>Cajas</span></a></li>
 				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
-				   <li class='last'><a href='accounts.html'><span>Cuentas</span></a></li>
+				   <li class='last'><a href='accounts.html'><span>Cuentas Pendientes</span></a></li>
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Editar Tratamiento Médico:</h2>
-				<br>
-				<fieldset>
-					<label>Unidad: </label> 
-					    	<select id="departmentId" name="departmentId">
-					    		<option value="-" >Seleccione</option>
-								<option value="337" >ALERGOLOGÍA</option>
-							 	<option value="660" >ANALISTAS DE SEGUROS</option>
-								<option value="338" >ANESTESIOLOGÍA</option>
-								<option value="340" >BIOANÁLISIS</option>
-								<option value="240" >CARDIOLOGÍA</option>
-								<option value="342" >CARDIOVASCULAR PERIFÉRICO</option>
-								<option value="343" >CIRUGÍA BARIÁTRICA</option>
-								<option value="344" >CIRUGÍA COLUMNA</option>
-								<option value="345" >CIRUGÍA DE TÓRAX</option>
-								<option value="887" >CIRUGIA EN ORTOPEDIA INFANTIL</option>
-								<option value="235" selected >CIRUGIA GENERAL</option>
-								<option value="346" >CIRUGÍA GINECOLÓGICA</option>
-								<option value="544" >CIRUGÍA LAPAROSCOPICA</option>
-								<option value="348" >CIRUGÍA MÁXILO-FACIAL </option>
-								<option value="349" >CIRUGÍA ONCOLÓGICA </option>
-								<option value="350" >CIRUGÍA PEDIÁTRICA</option>
-								<option value="351" >CIRUGÍA PLÁSTICA, ESTÉTICA Y RECONSTRUCTIVA</option>
-								<option value="935" >COLOPROCTOLOGÍA</option>
-								<option value="658" >COORDINADOR DE APS / SUP. DE SECRETARIAS</option>
-								<option value="236" >DERMATOLOGÍA</option>
-								<option value="352" >ENDOCRINOLOGÍA</option>
-								<option value="231" >FISIATRÍA</option>
-								<option value="353" >FISIOTERAPEUTAS</option>
-								<option value="238" >GASTROENTEROLOGÍA</option>
-								<option value="418" >GASTROENTEROLOGÍA INFANTIL</option>
-								<option value="355" >GINECO OBSTETRICIA</option>
-								<option value="356" >GINECOLOGÍA CLÍNICA</option>
-								<option value="239" >HEMATOLOGÍA</option>
-								<option value="357" >INFERTILIDAD</option>
-								<option value="419" >LABORATORIO</option>
-								<option value="359" >MASTOLOGÍA</option>
-								<option value="245" >MEDICINA INTERNA</option>
-								<option value="362" >MÉDICOS RESIDENTES</option>
-								<option value="656" >NEFROLOGIA DE ADULTOS</option>
-								<option value="364" >NEONATOLOGÍA</option>
-								<option value="365" >NEUMONOLOGÍA</option>
-								<option value="366" >NEUMONOLOGÍA PEDÍATRICA</option>
-								<option value="367" >NEUROCIRUGÍA</option>
-								<option value="233" >NEUROLOGÍA</option>
-								<option value="229" >NUTRICIÓN</option>
-								<option value="232" >OFTALMOLOGÍA</option>
-								<option value="370" >ONCOLOGÍA MÉDICA</option>
-								<option value="244" >OTORRINOLARINGOLOGÍA</option>
-								<option value="371" >PATOLOGÍA</option>
-								<option value="372" >PEDIATRÍA</option>
-								<option value="373" >PROCTOLOGÍA</option>
-								<option value="374" >PSQUIATRÍA</option>
-								<option value="375" >RADIOLOGÍA, IMAGENOLOGÍA</option>
-								<option value="376" >REUMATOLOGÍA</option>
-								<option value="659" >SECRETARIAS</option>
-								<option value="378" >TÉCNICOS RADIÓLOGOS</option>
-								<option value="379" >TOMOGRAFÍA Y RESONANCIA</option>
-								<option value="657" >TRAUMATOLOGIA ESPECIALISTA EN COLUMNA</option>
-								<option value="380" >TRAUMATOLOGÍA Y ORTOPEDIA</option>
-								<option value="242" >UROLOGÍA</option>
-								<option value="381" >UROLOGÍA PEDIÁTRICA</option>
-					    	</select><br><br>
-					<label for="name">Nombre:</label>
-					<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Frenuloplastia"/> <br><br>
-					<label for="name">Descripción:</label>
-					<textarea name="txtDescription" id="txtDescription" rows="3" cols="50">Cirugía plástica reparadora del frenillo breve.</textarea> <br><br>
-				</fieldset>
-				<div id="botonera">
-					<form action="protocols.html">
-						<div id="botonP" style="display: inline; margin-right: 30px;">
-									<input type="submit"  class="button"  name="sbmtButton" value="Modificar" />
-						</div>	
-						<div id="botonV" style="display: inline;">
-								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
-						</div>	
-					</form>
+		       	<form id="SignupForm" action="protocols.html">
+		        	<fieldset id="field1">
+			            <legend>Información Básica</legend>
+			           <label for="name">Nombre:</label>
+						<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value='Frenuloplastia'/> <br><br>
+						<label for="name">Descripción:</label>
+						<textarea name="txtDescription" id="txtDescription" rows="3" cols="50">Cirugía se realiza de forma ambulatoria con anestesia local y tiene una duración de 15 minutos.</textarea> <br><br>
+						<label for="name">Parecido A:</label>
+						<input type="button" name="txtSimilar" id="txtSimilar" value="Escoger"/> <br><br>
+						<label for="name">Tipo de Protocolo:</label>
+						<select id="typeOfProtocol">
+							<option value="A">Ambulatorio</option>
+							<option value="H" selected>No Ambulatorio</option>
+						</select>
+			        </fieldset>
+		       		<fieldset id="field4">
+			            <legend>Servicios Médicos</legend>
+			        	  <table class="table-simple">
+							    	<tr>
+							    		<td>Bancos de Sangre (Tipiaje)</td>
+							    		<td>Bs. 2270</td>
+							    	</tr>
+							    	<tr>
+							    		<td>Electrocardiograma (EKG)</td>
+							    		<td>Bs. 2270</td>
+							    	</tr>
+							    	<tr>
+							    		<td>Evaluación Cardiovascular pre-operatoria</td>
+							    		<td>Bs. 2270</td>
+							    	</tr>
+							    	<tr>
+							    		<td>Laboratorio Clínico</td>
+							    		<td>Bs. 2270</td>
+							    	</tr>
+							    	<tr>
+							    		<td>Rayos X</td>
+							    		<td>Bs. 2270</td>
+							    	</tr>
+						    </table>
+			        </fieldset>
+					<fieldset>
+			            <legend>Honorarios Médicos</legend>
+		        		<table class="table-simple">
+							    	<tr>
+							    		<td>Consulta Pre-anestésica</td>
+							    		<td></td>
+							    		<td>Bs. 2270</td>
+							    	</tr>
+						</table><br>
+						<div class="divisor"></div>
+						<h3>Personal Médico</h3>
+						<p class="button-par-doctors"> 
+			        		<input type ="button" value="Agregar Personal" class="buttonGray lessPadding"  onclick="addRowForDoctor('tableDoctors')"> 
+			        		<input type="button" value="Eliminar Personal" class="buttonGray lessPadding" onclick="deleteRowForDoctor('tableDoctors')">
+			        	</p> 
+	        			<table id="tableDoctors" class="sweetTable">
+							    	<tr>
+							    		<th style="width: 30%;">Personal</th>
+							    		<th style="width: 30%;">Cédula</th>
+							    		<th style="width: 20%;">Honorario</th>
+							    		<th style="width: 20%;">Seleccione para eliminar</th>
+							    	</tr>
+							    	<tr>
+							    		<td>Cirujano Principal</td>
+							    		<td>V-7103598</td>
+							    		<td>Bs. <input type="text" value="15000"></td>
+							    		<td><input type="checkbox"></td>
+							    	</tr>
+							    	<tr>
+							    		<td>Cirujano Ayudante I</td>
+							    		<td>V-123410</td>
+							    		<td>Bs. <input type="text" value="6000"></td>
+							    		<td><input type="checkbox"></td>
+							    	</tr>
+							    	<tr>
+							    		<td>Cirujano Ayudante Ii</td>
+							    		<td>V-7103598</td>
+							    		<td>Bs. <input type="text" value="4500"></td>
+							    		<td><input type="checkbox"></td>
+							    	</tr>
+							    </table>
+			        </fieldset>
+			        <p>
+			            <input id="SaveAccount" type="submit" class="button next" value="Crear Protocolo" />
+			        </p>
+			        </form>
 				</div>
 			</div>
-		</div>
 	</body>
 </html>
