--- a/WebContent/searchCashBoxForm.html
+++ b/WebContent/searchCashBoxForm.html
@@ -36,6 +36,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="bank.html">Ver Cajas</a></li>
+            		<li class="menuitem"><a href="createCashBox.html">Crear Caja</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -70,9 +71,10 @@
 					<label for="caja">Caja:</label>
 					<select name="txtCashBox" id="txtCashBox">
 						<option>Todas</option>
-						<option>Administración</option>
-						<option>Recepción</option>
-						<option>UCI</option>
+						<option>Principal</option>
+						<option>Imagen</option>
+						<option>Radiología</option>
+						<option>Laboratorio</option>
 					</select><br><br> 
 					<label for="cajero">Cajero:</label>
 					<select name="txtCashier" id="txtCashier">
