--- a/WebContent/showCashBox.html
+++ b/WebContent/showCashBox.html
@@ -14,6 +14,7 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>
 				<ul>
+					<li class="menuitem"><a href="bank.html">Ver Cajas</a></li>
             		<li class="menuitem"><a href="createCashBox.html">Crear Caja</a></li>
             	</ul>	
 		    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
@@ -46,7 +47,7 @@
 	        	<h2>Estatus Caja:</h2>   
 	        	<br>
 				<p>
-			   	<b>Caja:</b> Administracion<br><br>
+			   	<b>Caja:</b> Principal<br><br>
 			    <b>Fecha Apertura:</b> 20/07/2013<br><br>
 			    <b>Hora de apertura:</b> 9:30am<br><br>
 			    <b>Cajero:</b> Ana Roja<br><br>
