--- a/WebContent/bank.html
+++ b/WebContent/bank.html
@@ -108,19 +108,25 @@
 								<tbody>			
 									<tr class="gradeA">
 										<td>1001</td>
-										<td>Caja administracion</td>
+										<td>Caja Principal</td>
 										<td>Abierta</td>
 										<td>Bs. 100</td>
 										<td>
 											<a id="go" rel="leanModal" href="#closeCashW" style="color: #f7941e; font-weight: bold;"
-											onclick="return loadVars(1001,'Administración');" >
+											onclick="return loadVars(1001,'Principal');" >
 												<img alt="logo" src="./images/close.png"  height="16" width="16" title="Cerrar Caja" />
 											</a>
+											<a href="createPayment.html" style="color: transparent" >
+												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Registrar Pago" />
+											</a>
 											<a href="showCashBox.html" style="color: transparent" >
-												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Abrir Caja" />
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+											</a>
+											<a href="editCashBox.html" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar Caja" />
 											</a>
 											<a id="go" rel="leanModal" href="#deleteCash" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'Administración');" >
+												onclick="return loadVars(1001,'Principal');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
@@ -128,25 +134,73 @@
 									</tr>
 									<tr class="gradeA">
 										<td>1002</td>
-										<td>Caja recepcion</td>
+										<td>Caja Imagen</td>
 										<td>Cerrada</td>
 										<td>-</td>
 										<td>
 											<a id="go" rel="leanModal" href="#openCashW" style="color: #f7941e; font-weight: bold;"
-											onclick="return loadVars(1001,'Recepción');"  >
-												<img alt="logo" src="./images/open.png"  height="16" width="16" title="Ver Detalle" />
+											onclick="return loadVars(1001,'Imagen');"  >
+												<img alt="logo" src="./images/open.png"  height="16" width="16" title="Abrir Caja" />
 											</a>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar Caja" />
+											</a>
 											<a id="go" rel="leanModal" href="#deleteCash" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'Recepción');" >
+												onclick="return loadVars(1001,'Imagen');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
 											<br>
 										</td>
 									</tr>
-									
+									<tr class="gradeA">
+										<td>1003</td>
+										<td>Caja Radiología</td>
+										<td>Cerrada</td>
+										<td>-</td>
+										<td>
+											<a id="go" rel="leanModal" href="#openCashW" style="color: #f7941e; font-weight: bold;"
+											onclick="return loadVars(1001,'Radiología');"  >
+												<img alt="logo" src="./images/open.png"  height="16" width="16" title="Abrir Caja" />
+											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar Caja" />
+											</a>
+											<a id="go" rel="leanModal" href="#deleteCash" style="color: #f7941e; font-weight: bold;" 
+												onclick="return loadVars(1001,'Radiología');" >
+												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+											</a> 
+											<br>
+										</td>
+									</tr>
+									<tr class="gradeA">
+										<td>1004</td>
+										<td>Caja Laboratorio</td>
+										<td>Cerrada</td>
+										<td>-</td>
+										<td>
+											<a id="go" rel="leanModal" href="#openCashW" style="color: #f7941e; font-weight: bold;"
+											onclick="return loadVars(1001,'Laboratorio');"  >
+												<img alt="logo" src="./images/open.png"  height="16" width="16" title="Abrir Caja" />
+											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar Caja" />
+											</a>
+											<a id="go" rel="leanModal" href="#deleteCash" style="color: #f7941e; font-weight: bold;" 
+												onclick="return loadVars(1001,'Laboratorio');" >
+												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+											</a> 
+											<br>
+										</td>
+									</tr>
 								</tbody>
 							</table>
 						</div>
