--- a/WebContent/printSearchCashBox.html
+++ b/WebContent/printSearchCashBox.html
@@ -36,7 +36,7 @@
 	<!-- 
 	
 	function inhabilitar(){ 
-	   	return false;
+	   	return true;
 	} 
 	
 	document.oncontextmenu=inhabilitar;
@@ -55,34 +55,102 @@
 								<tbody>	
 									<tr>
 									<th>Caja</th>
+									<th>Fecha</th>
 									<th>Cajero</th>
-									<th>N° Cierre</th>
-									<th>Fecha Apertura</th>
-									<th>Fecha Cierre</th>
+									<th>Responsable Pago</th>
+									<th>Tipo</th>
+									<th>Forma</th>
 									<th>Monto</th>
+									<th>Total</th>
 								</tr>			
 									<tr class="gradeA">
-										<td>Administración</td>
+										<td>Principal</td>
+										<td>11/05/2013 08:00 am</td>
 										<td>Ricardo García</td>
-										<td>26472910</td>
-										<td>11/05/2013</td>
-										<td>11/05/2013</td>
+										<td></td>
+										<td>Apertura Caja</td>
+										<td>Efectivo</td>
 										<td>Bs. 1001</td>
+										<td>Bs. 1001</td>
+									</tr>			
+									<tr class="gradeA">
+										<td>Principal</td>
+										<td>11/05/2013 08:50 am</td>
+										<td>Ricardo García</td>
+										<td>Particular</td>
+										<td>Abono</td>
+										<td>Efectivo</td>
+										<td>Bs. 1500</td>
+										<td>Bs. 2501</td>
+									</tr>			
+									<tr class="gradeA">
+										<td>Principal</td>
+										<td>11/05/2013 11:42 am</td>
+										<td>Ricardo García</td>
+										<td>Mapfre La Seguridad</td>
+										<td>Pago</td>
+										<td>Cheque</td>
+										<td>Bs. 15000</td>
+										<td></td>
+									</tr>			
+									<tr class="gradeA">
+										<td>Principal</td>
+										<td>11/05/2013 03:29 pm</td>
+										<td>Ricardo García</td>
+										<td>Particular</td>
+										<td>Reintegro</td>
+										<td>Cheque</td>
+										<td>Bs. 10501</td>
+										<td></td>
+									</tr>			
+									<tr class="gradeA">
+										<td>Principal</td>
+										<td>11/05/2013 08:00 pm</td>
+										<td>Ricardo García</td>
+										<td></td>
+										<td>Cierre Caja</td>
+										<td>Efectivo</td>
+										<td></td>
+										<td>Bs. 2501</td>
 									</tr>
 									<tr class="gradeA">
-										<td>Administración</td>
+										<td>Principal</td>
+										<td>17/06/2013 08:00 pm</td>
 										<td>Ani Gómez</td>
-										<td>72910</td>
-										<td>17/06/2013</td>
-										<td>18/06/2013</td>
+										<td></td>
+										<td>Apertura Caja</td>
+										<td>Efectivo</td>
+										<td>Bs. 2017</td>
 										<td>Bs. 2017</td>
 									</tr>
 									<tr class="gradeA">
-										<td>Administración</td>
+										<td>Principal</td>
+										<td>18/06/2013 08:00 am</td>
+										<td>Ani Gómez</td>
+										<td></td>
+										<td>Cierre Caja</td>
+										<td>Efectivo</td>
+										<td></td>
+										<td>Bs. 2017</td>
+									</tr>
+									<tr class="gradeA">
+										<td>Principal</td>
+										<td>24/06/2013 08:00 pm</td>
 										<td>Luis Pérez</td>
-										<td>647105</td>
-										<td>24/06/2013</td>
-										<td>25/06/2013</td>
+										<td></td>
+										<td>Apertura Caja</td>
+										<td>Efectivo</td>
+										<td>Bs. 6196</td>
+										<td>Bs. 6196</td>
+									</tr>
+									<tr class="gradeA">
+										<td>Principal</td>
+										<td>25/06/2013 08:00 am</td>
+										<td>Luis Pérez</td>
+										<td></td>
+										<td>Cierre Caja</td>
+										<td>Efectivo</td>
+										<td></td>
 										<td>Bs. 6196</td>
 									</tr>
 								</tbody>
