--- a/WebContent/editEstimation.html
+++ b/WebContent/editEstimation.html
@@ -143,6 +143,21 @@
 									</a>
 								</td>
 					   		</tr>
+					   		<tr style="background: rgb(196, 196, 196);">
+					   			<td >Sub-total:</td>
+					   			<td>Bs. 22001</td>
+								<td></td>
+							</tr>
+					   		<tr style="background: rgb(196, 196, 196);">
+					   			<td >Descuento aplicado:</td>
+					   			<td>Bs. 1500</td>
+								<td></td>
+							</tr>
+					   		<tr style="background: rgb(136, 162, 190);">
+					   			<td >Total</td>
+					   			<td>Bs.20501 </td>
+								<td></td>
+							</tr>
 					   	</table>
 					</div>
   				</div>
