--- a/WebContent/editProtocol.html
+++ b/WebContent/editProtocol.html
@@ -251,7 +251,7 @@
 							    </table>
 			        </fieldset>
 			        <p>
-			            <input id="SaveAccount" type="submit" class="button next" value="Crear Protocolo" />
+			            <input id="SaveAccount" type="submit" class="button next" value="Editar Protocolo" />
 			        </p>
 			        </form>
 				</div>
