--- a/WebContent/editMedicalTreatment.html
+++ b/WebContent/editMedicalTreatment.html
@@ -138,7 +138,7 @@
 							    </table>
 			        </fieldset>
 			        <p>
-			            <input id="SaveAccount" type="submit" class="button next" value="Crear Protocolo" />
+			            <input id="SaveAccount" type="submit" class="button next" value="Editar Tratamiento" />
 			        </p>
 			        </form>
 				</div>
