--- a/WebContent/pendingRequest.html
+++ b/WebContent/pendingRequest.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Presupuestos</title>
+	<title>Solicitudes Pendientes</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -42,9 +42,10 @@
 		$('a[rel*=leanModal]').leanModal({ top : 200, closeButton: ".close_x" });		
 	});
 	
-	function loadVars(var1, var2) {
+	function loadVars(var1, var2, var3) {
 		idUser = var1;
 		$('.cliente').text(var2);
+		$('.monto').text(var3);
 		
 	};
 	
@@ -58,17 +59,20 @@
 	<div id="container">
 		<div id="header">
         	<img alt="logo" src="./images/logo.png"/>
-        </div>         
+        </div>        
+        <nav>
+			      <ul>
+			      	 <li><a href="#">Bienvenido, Prueba</a></li>
+			        <li><a href="pendingRequest.html">Solicitudes<span class="badge red">2</span></a></li>
+			      </ul>
+		    </nav> 
         <div id="menu">
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
-	    	<ul>
-            	<li class="menuitem"><a href="createEstimationForm.html">Crear Presupuesto</a></li>
-            </ul>
-			<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
+	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
 		<div id='cssmenu'>
 				<ul>
-				   <li class='first active'><a href='estimations.html'><span>Presupuesto</span></a></li>
+				   <li class='first'><a href='estimations.html'><span>Presupuesto</span></a></li>
 				   <li><a href='emergencies.html'><span>Emergencia</span></a></li>
 				   <li><a href='admission.html'><span>Admisión</span></a></li>
 				   <li><a href='hospitalization.html'><span>Hospitalización</span></a></li>
@@ -91,7 +95,7 @@
 				</ul>
 			</div>
 		<div id="content">  
-			<h2>Presupuestos:</h2>
+			<h2>Solicitudes Pendientes:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -110,27 +114,20 @@
 									<tr class="gradeA">
 										<td>1001</td>
 										<td>Ana Rojas</td>
-										<td>Aprobado</td>
+										<td>Bs. 1000,00 </td>
 										<td>Histerectomía</td>
 										<td>17/06/2013</td>
 										<td>
-											<a href="showEstimation.html?function=estimations" style="color: transparent" >
+											<a href="showDiscount.html" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
-											<a id="go" rel="leanModal" href="#printUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'1001');" >
-												<img alt="logo" src="./images/print.png"  height="16" width="16" title="Imprimir"/>
-											</a> 
-											<a href="editEstimation.html" style="color: transparent" >
-												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
-											</a>
 											<a id="go" rel="leanModal" href="#refreshUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'1001');" >
-												<img alt="logo" src="./images/refresh.png"  height="16" width="16" title="Actualizar"/>
+												onclick="return loadVars(1001,'Ana Rojas', '1000');" >
+												<img alt="logo" src="./images/check.png"  height="16" width="16" title="Aceptar"/>
 											</a> 
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'1001');" >
-												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												onclick="return loadVars(1001,'Ana Rojas','1000');" >
+												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Rechazar"/>
 											</a> 
 											<br>
 										</td>
@@ -138,47 +135,20 @@
 									<tr class="gradeA">
 										<td>1002</td>
 										<td>Luis Mujica</td>
-										<td>No Aplica</td>
+										<td>Bs. 4000,00</td>
 										<td>Colecistectomía</td>
 										<td>17/06/2013</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
-											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/print.png"  height="16" width="16" title="Imprimir" />
-											</a>
-											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
-											</a>
 											<a id="go" rel="leanModal" href="#refreshUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1002,'1002');" >
-												<img alt="logo" src="./images/refresh.png"  height="16" width="16" title="Actualizar"/>
+												onclick="return loadVars(1002,'Luis Mujica', '4000');" >
+												<img alt="logo" src="./images/check.png"  height="16" width="16" title="Aceptar"/>
 											</a> 
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1002,'1002');" >
-												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-											</a> 
-											<br>
-										</td>
-									</tr>
-									<tr class="gradeA">
-										<td>1003</td>
-										<td>Miguel Álvarez</td>
-										<td>En Espera</td>
-										<td>Apendicectomía</td>
-										<td>17/06/2013</td>
-										<td>
-											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
-											</a>
-											<a id="go" rel="leanModal" href="#refreshUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1003,'1003');" >
-												<img alt="logo" src="./images/refresh.png"  height="16" width="16" title="Actualizar"/>
-											</a> 
-											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1003,'1003');" >
-												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												onclick="return loadVars(1002,'Luis Mujica', '4000');" >
+												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Rechazar"/>
 											</a> 
 											<br>
 										</td>
@@ -191,43 +161,15 @@
 				<div class="spacer"></div>
         	</div>
        	</div>
-		<div id="printUser">
-			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Imprimir Presupuesto</h3>
-				<br><br>
-				<span>Seleccione en qué formato desea imprimir el presupuesto n° <span class="cliente"></span>: </span> <br><br>
-				<div id="signup-header">
-					<a class="close_x" id="close_x"  href="#"></a>
-				</div>
-				<form action="printEstimation3.html" method="post"  onsubmit="return setV(this)">
-					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					<div class="btn-fld">
-						<input type="submit"  class="buttonPopUpDelete2"  name="sbmtButton" value="Compacto"  />
-					</div>
-		 		</form>
-				<form action="printEstimation.html" method="post"  onsubmit="return setV(this)">
-					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					<div class="btn-fld">
-						<input type="submit"  class="buttonPopUpDelete3"  name="sbmtButton" value="Detallado"  />
-					</div>
-		 		</form>
-				<form action="printEstimation2.html" method="post"  onsubmit="return setV(this)">
-					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					<div class="btn-fld">
-						<input type="submit"  class="buttonPopUpDelete4"  name="sbmtButton" value="Detallado 2"  />
-					</div>
-		 		</form>
-			</div>
-		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Presupuesto</h3>
+				<h3 id="see_id" class="sprited" > Rechazar Descuento</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar el presupuesto n° <span class="cliente"></span>? </span> <br><br>
+				<span>¿Está seguro que desea rechazar el descuento de Bs. <span class="monto"></span>  para el paciente <span class="cliente"></span>? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
-				<form action="estimations.html" method="post"  onsubmit="return setV(this)">
+				<form action="pendingRequest.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
@@ -237,13 +179,13 @@
 		</div>
 		<div id="refreshUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Actualizar Presupuesto</h3>
+				<h3 id="see_id" class="sprited" > Aceptar Descuento</h3>
 				<br><br>
-				<span>¿Desea actualizar fecha y costos del presupuesto seleccionado? </span> <br><br>
+				<span>¿Desea aceptar el descuento de Bs. <span class="monto"></span>  para el paciente <span class="cliente"></span>? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
-				<form action="estimations.html" method="post"  onsubmit="return setV(this)">
+				<form action="pendingRequest.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
