--- a/WebContent/printEstimation.html
+++ b/WebContent/printEstimation.html
@@ -331,12 +331,16 @@
 					<td style="width:20%;text-align:right;">37.252,07</td>
 				</tr>
 				<tr id="totalTr">
+					<td colspan="2">*** DESCUENTO ***</td>
+					<td style="width:20%;text-align:right;">1.000,00</td>
+				</tr>
+				<tr id="totalTr2">
 					<td colspan="2">I.V.A.</td>
 					<td style="width:20%;text-align:right;">0,00</td>
 				</tr>
-				<tr id="totalTr2">
+				<tr id="totalTr">
 					<td colspan="2">*** TOTAL GENERAL ***</td>
-					<td style="width:20%;text-align:right;">37.252,07</td>
+					<td style="width:20%;text-align:right;">36.252,07</td>
 				</tr>
 			</tbody>
 			</table>
