--- a/WebContent/printEstimation3.html
+++ b/WebContent/printEstimation3.html
@@ -247,8 +247,12 @@
 					<td style="width:20%;text-align:right;">0,00</td>
 				</tr>
 				<tr id="totalTr2">
+					<td colspan="2">*** DESCUENTO ***</td>
+					<td style="width:20%;text-align:right;">10.000,00</td>
+				</tr>
+				<tr id="totalTr">
 					<td colspan="2">*** TOTAL GENERAL ***</td>
-					<td style="width:20%;text-align:right;">74.504,14</td>
+					<td style="width:20%;text-align:right;">64.504,14</td>
 				</tr>
 			</tbody>
 		</table>		
