--- a/WebContent/editEstimation.html
+++ b/WebContent/editEstimation.html
@@ -127,6 +127,9 @@
 					   			<td>Colocación de prótesis peneana</td>
 					   			<td>Bs. 14321,00</td>
 					   			<td>
+					   				<a href="editMedicalFees.html" style="color: transparent" >
+										<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar Protocolo" />
+									</a>
 										<a id="go" rel="leanModal" href="#deleteProtocol" style="color: #f7941e; font-weight: bold;" 
 											onclick="return loadVars(1001,'Colocación de prótesis peneana');" >
 											<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
@@ -137,6 +140,9 @@
 					   			<td>Apendicectomía</td>
 					   			<td>Bs. 7680,00</td>
 					   			<td>
+					   				<a href="#" style="color: transparent" >
+										<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar Protocolo" />
+									</a>
 									<a id="go" rel="leanModal" href="#deleteProtocol" style="color: #f7941e; font-weight: bold;" 
 											onclick="return loadVars(1001,'Apendicectomía');" >
 											<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
