--- a/WebContent/pendingAdmissionDischarges.html
+++ b/WebContent/pendingAdmissionDischarges.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Admisión</title>
+	<title>Altas Admisión Pendientes</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -94,7 +94,7 @@
 				</ul>
 			</div>
 		<div id="content">  
-			<h2>Admisión:</h2>
+			<h2>Altas Admisión Pendientes:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -103,9 +103,9 @@
 									<tr>
 										<th>ID</th>
 										<th>Paciente</th>
-										<th>Responsable Pago</th>
-										<th>Status</th>
-										<th>Ubicación</th>
+										<th>Médico Tratante</th>
+										<th>Fecha Ingreso</th>
+										<th>Fecha Egreso</th>
 										<th>Acciones</th>
 									</tr>
 								</thead>
@@ -113,51 +113,51 @@
 									<tr class="gradeA">
 										<td>1001</td>
 										<td>Ana Rojas</td>
-										<td>Multinacional de Seguros</td>
-										<td>Esperando Clave</td>
-										<td>Emergencias</td>
+										<td>Ricardo López</td>
+										<td>01/10/2013 09:00 pm</td>
+										<td>02/10/2013 12:00 pm</td>
 										<td>
-											<a href="showAdmission.html" style="color: transparent" >
+											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
-											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
+											<a id="go" rel="leanModal" href="#dischargeUser" style="color: #f7941e; font-weight: bold;" 
 												onclick="return loadVars(1001,'Ana Rojas');" >
-												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-											</a> 
+												<img alt="logo" src="./images/check.png"  height="16" width="16" title="Dar de Alta" />
+											</a>
 											<br>
 										</td>
 									</tr>
 									<tr class="gradeA">
 										<td>1002</td>
 										<td>Luis Mujica</td>
-										<td>La Previsora</td>
-										<td>Esperando Clave</td>
-										<td>Hospitalización</td>
+										<td>José Herrera</td>
+										<td>02/10/2013 09:00 am</td>
+										<td>02/10/2013 01:35 pm</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
-											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'Ana Rojas');" >
-												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-											</a> 
+											<a id="go" rel="leanModal" href="#dischargeUser" style="color: #f7941e; font-weight: bold;" 
+												onclick="return loadVars(1002,'Luis Mujica');" >
+												<img alt="logo" src="./images/check.png"  height="16" width="16" title="Dar de Alta" />
+											</a>
 											<br>
 										</td>
 									</tr>
 									<tr class="gradeA">
 										<td>1003</td>
 										<td>Miguel Álvarez</td>
-										<td>Seguros Caroní</td>
-										<td>Denegado</td>
-										<td>Emergencias</td>
+										<td>Ana Rodriguez</td>
+										<td>02/10/2013 09:10 am</td>
+										<td>02/10/2013 11:13 am</td>
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
-											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'Ana Rojas');" >
-												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-											</a> 
+											<a id="go" rel="leanModal" href="#dischargeUser" style="color: #f7941e; font-weight: bold;" 
+												onclick="return loadVars(1003,'Miguel Álvarez');" >
+												<img alt="logo" src="./images/check.png"  height="16" width="16" title="Dar de Alta" />
+											</a>
 											<br>
 										</td>
 									</tr>
@@ -169,15 +169,15 @@
 				<div class="spacer"></div>
         	</div>
        	</div>
-		<div id="deleteUser">
+		<div id="dischargeUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Admisión</h3>
+				<h3 id="see_id" class="sprited" > Alta de Admisión</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar del sistema la admisión de <span class="cliente"></span>? </span> <br><br>
+				<span>¿Está seguro que desea darle el alta de admisión a <span class="cliente"></span>? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
-				<form action="admission.html" method="post"  onsubmit="return setV(this)">
+				<form action="pendingAdmissionDischarges.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
